Bugfix: don't have text aligned left in buttons in button group
This only effects buttons where you've set a minimum width (eg because the text is quite short).

--- a/src/nhsuk/core/objects/_button-group.scss
+++ b/src/nhsuk/core/objects/_button-group.scss
@@ -84,7 +84,6 @@
       > .nhsuk-link,
       > a:not(.nhsuk-button) {
         margin-right: $horizontal-gap;
-        text-align: left;
       }
     }
   }
